fix: add z-index of the timer block

--- a/src/components/ListExercise/ListExercise.scss
+++ b/src/components/ListExercise/ListExercise.scss
@@ -32,6 +32,7 @@
     background-color: $background-white;
     padding: 10px 0;
     box-sizing: border-box;
+    z-index: 10;
   }
 
   &__category {
